UserStyles/TuttoAndroid.user.css
/* ==UserStyle==
@name			TuttoAndroid
@author			Domenico Blanco
@namespace		GitHub
@version		1.0.3
@preprocessor	default
==/UserStyle== */

@-moz-document domain("tuttoandroid.net"){
	:root {
		--primary-color: #18191a;
		--secondary-color: #242526;
		--third-color: #3a3b3c;
		--text: rgb(139, 195, 74);;
	}
	
	main, .tta-navbar, .socials, .tta-hotbar, .card-post.tuttotech .card-post-body, #tta-search, #adwallpaper, div.footer-bg, .footer-text {
		background: var(--primary-color);
	}
	
	.card-body, .card-post-body, .card-post.tuttotech .card-post-body, article, a.m-auto, .article-tags > a, #respond > button, .ta-cc-modal, #ta-cc-modal-settings, #ta-cc-modal-accept {
		background: var(--secondary-color)!important;
	}
	
	section, .scrollbar-container .scrollbar {
		background: var(--third-color);
		border-radius: 10px;
		padding-top: 10px;
		padding-bottom: 10vh;
		z-index: 5;
	}
	
	span, a, p, a, span, em, li, h1, h2, h3, .footer-text, .card-post.tuttotech a, .card-post.tuttotech span, #respond > button, div.ta-cc-modal-title, #ta-cc-modal-accept {
		color: var(--text)!important;
	}
	
	#ta-cc-modal-settings {
		color: #fff;
	}
	
	.tta-logo {
		background: url("/wp-content/themes/ta2018/static/media/logo.380bf833.svg") no-repeat 50%!important;
	}
	
	.tta-head{
		background: url(/wp-content/themes/ta2018/static/media/logo_head.5f8234ae.svg) no-repeat 50%!important;
	}

	.scrollbar-container.horizontal .scrollbar {
		display: none;
	}
}

